--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@octokit/graphql": "^9.0.3",
+    "@types/three": "^0.181.0",
     "lucide-react": "^0.554.0",
     "next": "^14.0.0",
     "node-cache": "^5.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
