--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
   "dependencies": {
     "@octokit/graphql": "^9.0.3",
     "@types/three": "^0.181.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
-    "next": "^14.0.0",
+    "next": "^16.0.3",
     "node-cache": "^5.1.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "three": "^0.181.2"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.54.0",
-    "eslint-config-next": "^14.0.0",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.3",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.3.2"
   }
 }
