--- a/package.json
+++ b/package.json
@@ -12,16 +12,26 @@
     "setup": "npm install && npm run check && npm run dev"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@octokit/graphql": "^9.0.3",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "next": "^16.0.3",
+    "next-themes": "^0.4.6",
     "node-cache": "^5.1.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.66.1",
     "resend": "^6.5.2",
-    "tailwind-merge": "^3.4.0"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
