--- a/package.json
+++ b/package.json
@@ -38,8 +38,11 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.48.0",
+    "@typescript-eslint/parser": "^8.48.0",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.5",
+    "eslint-plugin-react": "^7.37.5",
     "postcss": "^8.4.31",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.3.2"
